syntax="proto3";

option go_package="github.com/carepollo/multimodal-dating-matchmaker/auth/protos";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc Verify(VerifyRequest) returns (VerifyResponse) {};
}

message LoginRequest {
    string email = 1;
    string password = 2;
    string phonenumber = 3;
    int32 age = 4;
}

message LoginResponse {
    string token = 1;
    string userid = 2;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string phoneNumber = 4;
}

message RegisterResponse {
}

message VerifyRequest {}

message VerifyResponse {}
